--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "androidx.navigation.safeargs.kotlin"
+
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -46,12 +50,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
+
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -62,6 +67,15 @@ dependencies {
     //Rx
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // Navigation Components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //Dagger - Hilt
+    implementation "com.google.dagger:hilt-android:2.31.2-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
