--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        dataBinding=true
+    }
 }
 
 dependencies {
@@ -59,10 +62,15 @@ dependencies {
 
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    // Paging
-    implementation "androidx.paging:paging-runtime:2.1.0"
+
+
+
+    // paging 3
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta03"
+
 
     //Rx
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
