--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,11 +82,15 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.31.2-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
